cabal-version:   3.4
name:            hlisp
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Asliddinbek Azizovich
maintainer:      asliddin.abdivasiyev@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        HLisp
        HLisp.Eval
        HLisp.Lexer
        HLisp.Parser
        HLisp.Repl
        HLisp.Token

    build-depends:
        , base
        , containers
        , haskeline
        , megaparsec
        , mtl
        , QuickCheck
        , text
        , transformers

    hs-source-dirs:   src
    default-language: GHC2021

executable hlisp
    import:           warnings
    main-is:          Main.hs
    build-depends:
        , base
        , hlisp
        , pretty-simple
        , text

    hs-source-dirs:   app
    default-language: GHC2021

test-suite hlisp-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Lexer
        Parser
        Token

    build-depends:
        , base
        , hlisp
        , QuickCheck
        , tasty
        , tasty-quickcheck
        , text
